@@ -1,0 +1,14 @@
+A few notes regarding journalism's internal architecture. (Users should not care about any of these things.)
+
+* Operations on Tables return new Tables.
+
+* Operations on Columns return appropriate native data structures. Columns are not portable between tables!
+
+* Tables that are instantiated with raw data will copy that data so it becomes immutable within the context of the Table.
+
+* Tables that are forked will share Row instances for memory efficiency. This is safe because row data is immutable. Methods that create new data will copy data first. (e.g. Table.compute)
+
+* ColumnMapping, Row Sequence, Column, and Row have **read only** access to a Table's private variables. They are purely a formal abstraction and for purposes of encapsulation they can be treated as a single unit.
+
+* Operations accept functional arguments wherever possible for maximum flexibility.
+
