@@ -9,7 +9,7 @@ from decimal import Decimal
 
 from journalism.columns import ColumnMapping, DecimalColumn
 from journalism.exceptions import UnsupportedOperationError
-from journalism.rows import RowSequence
+from journalism.rows import RowSequence, Row
 
 def transpose(data):
     """
@@ -23,19 +23,28 @@ class Table(object):
 
     TODO: dedup column names
     """
-    def __init__(self, rows, column_types=[], column_names=[], cast=False, validate=False):
+    def __init__(self, rows, column_types=[], column_names=[], cast=False, validate=False, _forked=False):
         """
         Create a table from rows of data.
+
+        Rows is a 2D array of any common iterable: tuple, list, etc.
 
         TODO: validate column_types are all subclasses of Column.
         """
         if not column_names:
             column_names = [unicode(d) for d in rows.pop(0)]
 
-        self._data = rows
+        # Forked tables can share data (because they are immutable)
+        # but original data should be buffered so it can't be changed
+        if not _forked:
+            self._data = copy.deepcopy(rows)
+        else:
+            self._data = rows
+
         self._column_types = column_types
         self._column_names = column_names
         self._cached_columns = {}
+        self._cached_rows = {}
 
         self.columns = ColumnMapping(self)
         self.rows = RowSequence(self)
@@ -63,10 +72,23 @@ class Table(object):
 
         return self._cached_columns[i]
 
-    def _fork(self, new_data, column_types=[], column_names=[]):
+    def _get_row(self, i):
+        """
+        Get a Row of data, caching a copy for the next request.
+        """
+        if i not in self._cached_rows:
+            # If rows are from a fork, they are safe to access directly
+            if isinstance(self._data[i], Row):
+                self._cached_rows[i] = self._data[i]
+            else:
+                self._cached_rows[i] = Row(self, i)
+
+        return self._cached_rows[i]
+
+    def _fork(self, rows, column_types=[], column_names=[]):
         """
         Create a new table using the metadata from this one.
-        Used internally by functions like :meth:`sort_by`.
+        Used internally by functions like :meth:`order_by`.
         """
         if not column_types:
             column_types = self._column_types
@@ -74,7 +96,7 @@ class Table(object):
         if not column_names:
             column_names = self._column_names
 
-        return Table(new_data, column_types, column_names)
+        return Table(rows, column_types, column_names, _forked=True)
 
     def get_data(self):
         """
@@ -94,18 +116,6 @@ class Table(object):
         """
         return self._column_names
 
-    def sort_by(self, column_name, cmp=None, reverse=False):
-        """
-        Sort this table by the specified column.
-
-        Returns a new :class:`Table`.
-        """
-        i = self._column_names.index(column_name)
-
-        data = sorted(self._data, cmp=cmp, key=lambda r: r[i], reverse=reverse)
-
-        return self._fork(data)
-
     def select(self, column_names=[]):
         """
         Reduce this table to only the specified columns.
@@ -117,7 +127,7 @@ class Table(object):
 
         new_rows = []
 
-        for row in self._data:
+        for row in self.rows:
             new_rows.append([row[i] for i in column_indices])
 
         return self._fork(new_rows, column_types, column_names)
@@ -128,9 +138,22 @@ class Table(object):
 
         Returns a new :class:`Table`.
         """
-        rows = [self._data[i] for i, row in enumerate(self.rows) if func(row)]
+        rows = [row for row in self.rows if func(row)]
 
         return self._fork(rows)
+
+    def order_by(self, func, cmp=None, reverse=False):
+        """
+        Sort this table by the key returned from the row function.
+
+        Optionally you can also specify a custom comparison function.
+        See :func:`sorted` for more details.
+
+        Returns a new :class:`Table`.
+        """
+        data = sorted(self.rows, cmp=cmp, key=func, reverse=reverse)
+
+        return self._fork(data)
 
     def limit(self, start_or_stop, stop=None, step=None):
         """
@@ -139,9 +162,9 @@ class Table(object):
         `start`, `stop` and `step`, just like Python's builtin :func:`slice`.
         """
         if stop or step:
-            return self._fork(self._data[slice(start_or_stop, stop, step)])
+            return self._fork(self.rows[slice(start_or_stop, stop, step)])
         
-        return self._fork(self._data[:start_or_stop])
+        return self._fork(self.rows[:start_or_stop])
 
     def aggregate(self, group_by, operations=[]):
         """
@@ -196,13 +219,15 @@ class Table(object):
         
         Returns a new :class:`Table`.
         """
-        rows = copy.deepcopy(self._data)
+        # Ensure we have raw data, not Row instances
+        rows = [list(row) for row in self._data]
+
         column_types = copy.deepcopy(self._column_types) + [column_type]
         column_names = copy.deepcopy(self._column_names) + [column_name]
 
         for i, row in enumerate(self.rows):
             rows[i] += [func(row)] 
-            
+
         return self._fork(rows, column_types, column_names)
 
     def percent_change(self, before_column_name, after_column_name, new_column_name):
